Fix overflow, write README.

--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 #recipe-card {
   display: inline-block;
